2013-03-08  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (process_alt_operands): Don't penalize
	alternative of move insn which is an elimination result.
	(process_address): Use EXTRA_CONSTRAINT_STR for validation of
	extra address constraints.
	* lra-eliminations.c (eliminate_regs_in_insn): Make return earlier
	if there are no operand changes.
	* lra-spills.c (lra_final_code_change): Skip subreg change for
	operators.

2013-01-14  Steven Bosscher  <steven@gcc.gnu.org>

	* ira-build.c (ira_flattening): Comment fix.

	Port the following LRA changes on trunk back to the LRA branch:

	2013-01-10  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/pr55672
	* lra-eliminations.c (mark_not_elimnable): Permit addition with
	const to be elimnable.

	2012-12-21  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/55775
	* lra-assigns.c (improve_inheritance): Do nothing after
	LRA_MAX_INHERITANCE_PASSES pass.
	* lra-constraints.c (MAX_CONSTRAINT_ITERATION_NUMBER): Rename to
	LRA_MAX_CONSTRAINT_ITERATION_NUMBER.  Move to lra-int.h.
	(MAX_INHERITANCE_PASSES): Rename to LRA_MAX_INHERITANCE_PASSES.
	Move to lra-int.h.
	* lra-int.h (LRA_MAX_CONSTRAINT_ITERATION_NUMBER): Move from
	lra-constraints.c.
	(LRA_MAX_INHERITANCE_PASSES): Ditto.

	2012-12-21  Steve Ellcey  <sellcey@mips.com>

	PR bootstrap/54128
	* ira.c (build_insn_chain): Check only NONDEBUG instructions for
	register usage.

	2012-12-11  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/55193
	* lra-constraints.c (loc_equivalence_callback): New function.
	(lra_constraints): Call simplify_replace_fn_rtx instead of
	loc_equivalence_change_p on DEBUG_INSNs.

2012-12-13  Vladimir Makarov  <vmakarov@redhat.com>

	* params.def (PARAM_LRA_EBB_PROBABILITY): New param.
	* params.h (LRA_EBB_PROBABILITY): New.
	* Makefile.in (lra-constraints.c): Add dependence on $(PARAMS_H).
	* doc/invoke.texi (lra-ebb-probability): Describe.
	* lra-constraints.c: Include "params.h".