@@ -1,3 +1,8 @@
+2013-03-15  Vladimir Makarov  <vmakarov@redhat.com>
+
+	* lra.c (lra): Allign non-empty stack frame.
+	* lra-spills.c (lra_spill): Allign stack after spilling pseudos.
+
 2013-03-08  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* lra-constraints.c (process_alt_operands): Don't penalize
